4.vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress-service
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: vault.practicecloud.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-ui
                port: 
                  number: 8200

  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - vault.practicecloud.cloud
    secretName: vault-cert
